完善项目删除后关于文件和历史信息的清空

--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -1,15 +1,15 @@
 spring:
   config:
-    name: dev
+    name: test
     activate:
-      on-profile: dev
+      on-profile: test
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/apk?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=true
+    url: jdbc:mysql://47.98.244.244:3306/apk?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=true
     username: root
     password: "071721"
 server:
-  port: 8888
+  port: 1000
 
 knife4j:
   enable: true
